[package]
name = "bnf_lr1_checker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokenizer = { git = "https://github.com/White-Green/Yet-Another-Rust-Parser", rev = "235b4e3d91dd17f085a0784d8fc5547785184ed9" }
tokenizer_generator = { git = "https://github.com/White-Green/Yet-Another-Rust-Parser", rev = "235b4e3d91dd17f085a0784d8fc5547785184ed9" }
parser = { git = "https://github.com/White-Green/Yet-Another-Rust-Parser", rev = "235b4e3d91dd17f085a0784d8fc5547785184ed9" }
parser_generator = { git = "https://github.com/White-Green/Yet-Another-Rust-Parser", rev = "235b4e3d91dd17f085a0784d8fc5547785184ed9" }
clap = "2.33.3"
