[package]
name = "bnf_lr1_checker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { git = "https://github.com/White-Green/Yet-Another-Rust-Parser", rev = "cb7249f9da434fe4e44a089f798ce213a9d52140" }
parser_generator = { git = "https://github.com/White-Green/Yet-Another-Rust-Parser", rev = "cb7249f9da434fe4e44a089f798ce213a9d52140" }
clap = "2.33.3"
syn = "1.0.80"
